--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -8,18 +8,25 @@
       'sidebar main main';
     grid-template-columns: 250px 1fr;
     grid-template-rows: auto 1fr;
-    height: 100vh;
+    // height: 100vh;
   }
 
   &__main {
     grid-area: main;
     background-color: gray;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px
   }
 
   &__chart {
 
     &-container {
-      width: 90%;
+      display: grid;
+      grid-template-columns: repeat(2, 800px);
+      grid-template-rows: repeat(4, 1fr);
+      grid-gap: 10px;
     }
   }
 }
+
